5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1674_1880.log
== TEST (2019-04-30 10:33:16) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input())
mes = ["janeiro","fevereiro","marco","abril","maio","junho","julho","agosto","setembro","outubro","novembro","dezembro"]
if m not int range(1,13):
	print("numero de mes invalido")
else:
	print(mes[m+1])
-- ERROR:
File "XXXX", line 4
    if m not int range(1,13):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:33:23) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input())
mes = ["janeiro","fevereiro","marco","abril","maio","junho","julho","agosto","setembro","outubro","novembro","dezembro"]
if m not in range(1,13):
	print("numero de mes invalido")
else:
	print(mes[m+1])
-- OUTPUT:
junho
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:33:45) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input())
mes = ["janeiro","fevereiro","marco","abril","maio","junho","julho","agosto","setembro","outubro","novembro","dezembro"]
if m not in range(1,13):
	print("numero de mes invalido")
else:
	print(mes[m-1])
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:33:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input())
mes = ["janeiro","fevereiro","marco","abril","maio","junho","julho","agosto","setembro","outubro","novembro","dezembro"]
if m not in range(1,13):
	print("numero de mes invalido")
else:
	print(mes[m-1])
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:33:51) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input())
mes = ["janeiro","fevereiro","marco","abril","maio","junho","julho","agosto","setembro","outubro","novembro","dezembro"]
if m not in range(1,13):
	print("numero de mes invalido")
else:
	print(mes[m-1])
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:33:53) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input())
mes = ["janeiro","fevereiro","marco","abril","maio","junho","julho","agosto","setembro","outubro","novembro","dezembro"]
if m not in range(1,13):
	print("numero de mes invalido")
else:
	print(mes[m-1])
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:33:59) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input())
mes = ["janeiro","fevereiro","marco","abril","maio","junho","julho","agosto","setembro","outubro","novembro","dezembro"]
if m not in range(1,13):
	print("numero de mes invalido")
else:
	print(mes[m-1])
-- EXECUTION TIME:
0.189018
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
